--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_wall.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_70"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/wall_filter_container"
             android:clickable="true"
             android:visibility="gone">
 
@@ -105,7 +106,7 @@
                     android:scaleType="centerInside"
                     android:src="@drawable/btn_send"
                     android:tint="?wallItemsColor"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <View
