--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_create_chat.xml
@@ -260,5 +260,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/chat_search_friends_container"
         android:clipToPadding="false"
-        android:numColumns="auto_fit" />
+        android:numColumns="auto_fit"
+        android:layout_above="@+id/chat_friends_in_chat_container" />
 </RelativeLayout>
