--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
@@ -204,8 +204,7 @@
             android:clickable="true"
             android:gravity="center"
             android:padding="@dimen/half_margin"
-            android:visibility="gone"
-            android:weightSum="0.9">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/chat_menu_create"
@@ -214,7 +213,7 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="@dimen/margin_5"
                 android:layout_marginStart="@dimen/margin_5"
-                android:layout_weight="0.3"
+                android:layout_weight="0.25"
                 android:textSize="@dimen/font_size_10"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
@@ -229,13 +228,29 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="@dimen/margin_5"
                 android:layout_marginStart="@dimen/margin_5"
-                android:layout_weight="0.3"
+                android:layout_weight="0.25"
                 android:textSize="@dimen/font_size_10"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="Edit"
                 android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/chat_menu_delete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/margin_5"
+                android:layout_marginStart="@dimen/margin_5"
+                android:layout_weight="0.25"
+                android:textSize="@dimen/font_size_10"
+                android:background="?textViewRoundBorderShape"
+                android:gravity="center"
+                android:padding="@dimen/half_margin"
+                android:text="Delete"
+                android:textColor="@color/white" />
+
 
             <TextView
                 android:id="@+id/chat_menu_search"
@@ -245,7 +260,7 @@
                 android:layout_marginEnd="@dimen/margin_5"
                 android:textSize="@dimen/font_size_10"
                 android:layout_marginStart="@dimen/margin_5"
-                android:layout_weight="0.3"
+                android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
