--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_member_info.xml
@@ -140,48 +140,68 @@
 
     </RelativeLayout>
 
-    <Button
+    <ImageView
         android:id="@+id/chat_button"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/height_48"
         android:layout_height="@dimen/height_48"
-        android:layout_above="@+id/follow_button"
+        android:layout_above="@+id/follow_button_image"
         android:layout_marginBottom="@dimen/margin_15"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
-        android:background="@null"
-        android:drawableStart="@drawable/friend_chat_button"
-        android:drawablePadding="@dimen/margin_10"
-        android:text="@string/chat_caption"
-        android:textColor="@color/white" />
+        android:src="@drawable/friend_chat_button" />
 
-    <Button
-        android:id="@+id/follow_button"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/chat_button_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/chat_button"
+        android:layout_alignBottom="@+id/chat_button"
+        android:gravity="center_vertical"
+        android:text="@string/chat_caption"
+        android:textColor="@color/white"
+        android:layout_toEndOf="@+id/chat_button" />
+
+    <ImageView
+        android:id="@+id/follow_button_image"
+        android:layout_width="@dimen/height_48"
+        android:layout_height="@dimen/height_48"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/margin_15"
+        android:layout_marginEnd="@dimen/margin_20"
+        android:layout_marginStart="@dimen/margin_20"
+        android:layout_toEndOf="@+id/middle_split_line" />
+
+    <TextView
+        android:id="@+id/follow_button_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/follow_button_image"
+        android:layout_alignBottom="@+id/follow_button_image"
+        android:gravity="center_vertical"
+        android:textColor="@color/white"
+        android:layout_toEndOf="@+id/follow_button_image" />
+
+    <ImageView
+        android:id="@+id/friend_button_image"
+        android:layout_width="@dimen/height_48"
         android:layout_height="@dimen/height_48"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/margin_15"
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
-        android:background="@null"
-        android:drawableStart="@drawable/friend_follow_button"
-        android:drawablePadding="@dimen/margin_10"
-        android:textColor="@color/white" />
+        android:layout_below="@+id/follow_button_image" />
 
-
-    <Button
-        android:id="@+id/friend_button"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:background="@null"
-        android:drawableLeft="@drawable/friend_follow_button"
-        android:drawablePadding="@dimen/margin_10"
-        android:gravity="left|center_vertical"
+    <TextView
+        android:id="@+id/friend_button_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/friend_button_image"
+        android:layout_alignBottom="@+id/friend_button_image"
+        android:gravity="center_vertical"
         android:textColor="@color/white"
-        android:layout_below="@+id/follow_button"
-        android:layout_alignStart="@+id/follow_button" />
-
+        android:layout_toEndOf="@+id/friend_button_image" />
 
     <!-- BOTTOM BUTTONS CONTAINER -->
     <RelativeLayout
