--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
@@ -478,13 +478,14 @@
             android:src="@drawable/edit_button" />
 
         <ImageButton
-            android:id="@+id/reset_button"
+            android:id="@+id/light_theme_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:layout_marginStart="@dimen/margin_10"
             android:background="@null"
+            android:visibility="gone"
             android:scaleType="centerInside"
             android:src="@drawable/reset_button"
             android:layout_toEndOf="@id/edit_button"/>
@@ -496,7 +497,7 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_30"
             android:background="@null"
-            android:layout_toEndOf="@id/reset_button"
+            android:layout_toEndOf="@id/light_theme_button"
             android:scaleType="centerInside"
             android:src="@drawable/logout_button"
             android:layout_marginStart="@dimen/margin_10"/>
