Alert dialogs with blurred background.

--- a/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
@@ -107,6 +107,7 @@
     <attr name="popupConfirmationButtonIcon" format="reference" />
 
     <attr name="popupBottomBackgroundDarkShape" format="reference" />
+    <attr name="popupBottomBackgroundDarkShapeDialog" format="reference" />
     <attr name="chatBackground" format="reference" />
     <attr name="arrowDownIcon" format="reference" />
 
