--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -134,7 +134,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"></RelativeLayout>
+            android:background="@color/transparent"/>
 
         <RelativeLayout
             android:id="@+id/fragment_left_popup_holder"
@@ -143,7 +143,23 @@
             android:layout_above="@+id/side_menu_recycler"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent"></RelativeLayout>
+            android:background="@color/transparent"/>
+
+        <RelativeLayout
+            android:id="@+id/blurred_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/transparent"/>
+
+        <RelativeLayout
+            android:id="@+id/fragment_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/transparent"/>
 
     </android.support.percent.PercentRelativeLayout>
 
