--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news.xml
@@ -40,11 +40,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
+                        android:gravity="center"
                         android:text="NEWS"
+                        android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textStyle="bold"
                         android:textSize="40sp"
-                        android:gravity="center"/>
+                        android:textStyle="bold" />
 
                 </RelativeLayout>
 
