--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_news.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_230">
+    android:layout_height="@dimen/height_230"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/image_container"
@@ -79,12 +80,28 @@
                 android:layout_toStartOf="@id/comments_container"
                 android:gravity="center">
 
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_15"
-                    android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like" />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/likes_icon"
+                        android:layout_width="@dimen/width_15"
+                        android:layout_height="@dimen/height_15"
+                        android:layout_marginEnd="@dimen/margin_2"
+                        android:background="@drawable/ic_like" />
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/liked_icon"
+                        android:layout_width="@dimen/width_15"
+                        android:layout_height="@dimen/height_15"
+                        android:layout_marginEnd="@dimen/margin_2"
+                        android:background="@drawable/ic_like"
+                        app:backgroundTint="?colorPrimaryLight"
+                        android:visibility="gone" />
+
+
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/likes_count"
