--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
@@ -311,7 +311,7 @@
                 android:id="@+id/bottom_horizontal_split_line"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/read_more_holder"
+                android:layout_below="@+id/read_more_holder"
                 android:background="@color/green_dark_5" />
 
             <LinearLayout
