--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_video_chat.xml
@@ -34,11 +34,11 @@
                 android:id="@+id/toggle_mic_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@null"
-                android:layout_gravity="center"
                 android:scaleType="centerInside"
-                android:src="@drawable/chat_button_voice" />
+                android:src="@drawable/microphone_selector_phone" />
 
             <ImageButton
                 android:id="@+id/toggle_video_button"
@@ -49,7 +49,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:scaleType="centerInside"
-                android:src="@drawable/video_video" />
+                android:src="@drawable/video_phone_selector" />
 
             <ImageButton
                 android:id="@+id/toggle_camera_button"
@@ -91,85 +91,127 @@
         android:layout_above="@+id/bottom"
         android:visibility="gone">
 
-        <include
-            android:id="@+id/slot_2"
-            layout="@layout/item_video_chat_slot"
+        <RelativeLayout
+            android:id="@+id/relativeLayout3"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="?demo_blue_semitransparent"
-            app:layout_constraintBottom_toTopOf="@+id/preview_container"
-            app:layout_constraintLeft_toRightOf="@+id/slot_3"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <include
-            android:id="@+id/slot_3"
-            layout="@layout/item_video_chat_slot"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="?demo_green_semitransparent"
-            app:layout_constraintBottom_toTopOf="@+id/preview_container"
+            android:layout_height="wrap_content"
+            android:background="?green_dark_phone_4"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/slot_2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <include
-            android:id="@+id/slot_4"
-            layout="@layout/item_video_chat_slot"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="?demo_yellow_semitransparent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/preview_container"
-            app:layout_constraintTop_toBottomOf="@+id/slot_3" />
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/preview_container"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/slot_4"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/slot_2">
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/disabled_video_icon"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_centerInParent="true"
-                android:layout_marginBottom="0dp"
-                android:src="@drawable/video_disabled"
-                android:scaleType="fitXY"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.twilio.video.VideoView
-                android:id="@+id/preview_video_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginBottom="0dp"
-                app:layout_constraintBottom_toBottomOf="@+id/preview_user_name_text_view"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/preview_user_name_text_view"
+            <Chronometer
+                android:id="@+id/chronometer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_8"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_size_12"
-                android:visibility="gone"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:format="00:00"
+                android:padding="@dimen/padding_8"
+                android:textAlignment="center"
+                android:textColor="?white"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/nick_name_users"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/chronometer"
+                android:padding="@dimen/padding_8"
+                android:textAlignment="viewStart"
+                android:textColor="?white_semitransparent" />
+        </RelativeLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">
+
+            <include
+                android:id="@+id/slot_2"
+                layout="@layout/item_video_chat_slot"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="?demo_blue_semitransparent"
+                app:layout_constraintBottom_toTopOf="@+id/preview_container"
+                app:layout_constraintLeft_toRightOf="@+id/slot_3"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/slot_3"
+                layout="@layout/item_video_chat_slot"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="?demo_green_semitransparent"
+                app:layout_constraintBottom_toTopOf="@+id/preview_container"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/slot_2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <include
+                android:id="@+id/slot_4"
+                layout="@layout/item_video_chat_slot"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="?demo_yellow_semitransparent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/preview_container"
+                app:layout_constraintTop_toBottomOf="@+id/slot_3" />
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/preview_container"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/slot_4"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/preview_video_view" />
+                app:layout_constraintTop_toBottomOf="@+id/slot_2">
+
+                <ImageView
+                    android:id="@+id/disabled_video_icon"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_centerInParent="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/video_disabled"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.twilio.video.VideoView
+                    android:id="@+id/preview_video_view"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/preview_user_name_text_view"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/preview_user_name_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_8"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_size_12"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/preview_video_view" />
+            </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
 
 
