--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -54,6 +54,7 @@
     <color name="background_phone">#225357</color>
     <color name="green_dark_phone_3">#01363c</color>
     <color name="status_online_color">#4ff70e</color>
+    <color name="white_green_phone">#a2b4b8</color>
     <!--*****************************************************************************************-->
     <!--Light Theme-->
     <color name="light_colorAccent">#ffe324</color>
