--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_new_call.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_new_call.xml
@@ -127,6 +127,7 @@
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
+                android:id="@+id/chat_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
