--- a/SportsSideKick/app/src/sportsidekick/res/layout/tv_category_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/tv_category_item.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="@dimen/padding_4"
+    android:paddingBottom="@dimen/padding_4"
+    android:paddingTop="@dimen/padding_4"
     android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image"
