--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
@@ -93,6 +93,7 @@
                 android:src="@drawable/scp_white_logo" />
 
             <TextView
+                android:id="@+id/title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
