--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_new_call.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
-    android:background="@color/background_phone"
+    android:background="?background_phone"
     android:clickable="true"
     android:orientation="vertical">
 
