--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
@@ -7,7 +7,7 @@
     android:layout_marginEnd="@dimen/margin_base_size_90"
     android:layout_marginStart="@dimen/margin_base_size_90"
     android:layout_marginTop="@dimen/margin_base_size_60"
-    android:background="?wallBackground"
+    android:background="?background_phone"
     android:clickable="true"
     tools:ignore="MissingPrefix">
 
@@ -131,8 +131,9 @@
                 android:background="@color/green_dark_5" />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_below="@+id/top_split"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/top_buttons_container"
+        android:layout_alignParentStart="true">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
