--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_member_info.xml
@@ -97,8 +97,7 @@
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="54dp"
+
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@+id/profile_image"
             android:background="@drawable/user_status_backgraound"
@@ -112,11 +111,11 @@
             android:textSize="@dimen/font_size_10"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="@+id/guideline"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+            android:layout_marginLeft="11dp" />
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="4dp"
@@ -142,7 +141,7 @@
                 android:max="@integer/progress_bar_max"
                 android:progress="@integer/progress_bar_60"
                 android:progressDrawable="@drawable/circular_progress_bar" />
-        </FrameLayout>
+        </RelativeLayout>
 
 
         <ImageView
@@ -158,10 +157,10 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:contentDescription="@string/image"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="?profileImageIcon"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/guideline3"
             app:layout_constraintRight_toLeftOf="@+id/guideline4"
             app:layout_constraintTop_toTopOf="@+id/guideline"
@@ -287,6 +286,13 @@
             app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintLeft_toLeftOf="@+id/guideline3"
             app:layout_constraintRight_toLeftOf="@+id/guideline4" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline5"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
     </android.support.constraint.ConstraintLayout>
 
