--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
@@ -186,6 +186,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
                             android:contentDescription="@string/image"
+                            android:scaleType="fitXY"
                             android:src="?profileImageIcon" />
                     </RelativeLayout>
 
