Rumours and profile layout fixed.

--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_55">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/row_rumors_description"
@@ -14,8 +14,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="@dimen/margin_15"
-            android:layout_marginRight="@dimen/margin_15"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginEnd="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_15"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="?rumourSmallContentColor"
@@ -28,6 +29,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="@dimen/margin_15"
         android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginEnd="@dimen/margin_15"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
