--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
@@ -222,7 +222,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/contact_info_caption"
                 android:text="email@email.com"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_alignEnd="@+id/text_center" />
 
             <TextView
                 android:id="@+id/contact_info_phone"
@@ -250,7 +251,8 @@
                 android:layout_alignStart="@+id/contact_info_caption"
                 android:layout_below="@+id/subscribed_since_caption"
                 android:text="07.12.16"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_toStartOf="@+id/password_caption" />
 
             <TextView
                 android:id="@+id/location_caption"
