--- a/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
@@ -71,8 +71,7 @@
         <item name="loginBackground">@drawable/background_login</item>
 
         <item name="chatAddUserIcon">@drawable/chat_add_user</item>
-        <item name="chatNotificationIcon">@drawable/chat_head_notification
-        </item> <!-- TODO @Nemanja - Why is this a 9patch? It should be updated to circle. -->
+        <item name="chatNotificationIcon">@drawable/chat_head_notification</item>
         <item name="blockedIcon">@drawable/icon_blocked</item>
         <item name="chatBubbleIcon">@drawable/chat_bubble</item>
         <item name="popupCancelButtonIcon">@drawable/popup_cancel_button</item>
