Share manager added explanation for share, Rumours - handled swipe.

--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend.xml
@@ -8,5 +8,5 @@
         android:layout_centerHorizontal="true"
         android:background="@null"
         android:scaleType="centerCrop"
-        android:src="@drawable/add_chat_user"/>  <!-- TODO @Nemanja Why blank space in png image ? -->
+        android:src="@drawable/add_chat_user"/>
 </RelativeLayout>
